--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@
   }
 
   function updateAverage() {
-    if (!state.firstPressTs || state.pressCount === 0) {
-      avgTextEl.textContent = '—';
-      return;
-    }
-    const elapsedMin = (Date.now() - state.firstPressTs) / 60000;
-    const adjustedMin = elapsedMin - state.totalSleepRemovedMin;
-    const avg = adjustedMin / state.pressCount;
-    avgTextEl.textContent = formatMinutes(avg);
+  if (!state.firstPressTs || state.pressCount < 2) {
+    avgTextEl.textContent = '—';
+    return;
   }
+  const elapsedMin = (Date.now() - state.firstPressTs) / 60000;
+  const adjustedMin = Math.max(0, elapsedMin - state.totalSleepRemovedMin);
+  const intervals = state.pressCount - 1;
+  const avg = adjustedMin / intervals;
+  avgTextEl.textContent = formatMinutes(avg);
+}
 
   function stopTimer() {
     running = false;
