--- a/index.html
+++ b/index.html
@@ -18,82 +18,23 @@
   label { font-size:1em; margin-left:8px; }
   input[type="time"] { padding:5px; font-size:0.95em; }
   .stat2 {
-  background: #f9f9fb;
-  border: 1px solid #d3d3e7;
-  border-radius: 10px;
-  padding: 22px 18px 16px 18px;
-  box-shadow: 0 2px 8px rgba(90,100,120,0.06);
-  max-width: 400px;
-  direction: rtl;
-  font-family: 'Heebo', Arial, sans-serif;
-  margin: 38px auto 0 auto; /* רווח למעלה ויישור לאמצע */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.stat2 > div:first-child {
-  font-size: 1.12em;
-  color: #272752;
-  margin-bottom: 10px;
-  font-weight: 600;
-  text-align: center;
-}
-
-.row2 {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.row2 label {
-  font-size: 1em;
-  color: #38387a;
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
-
-.row2 input[type="time"] {
-  border: 1px solid #b8b8d1;
-  border-radius: 6px;
-  padding: 4px 8px;
-  font-size: 1em;
-  background: #fff;
-  color: #2e2e47;
-  outline: none;
-  transition: border 0.2s;
-}
-
-.row2 input[type="time"]:focus {
-  border-color: #6c63ff;
-}
-
-#addSleepBtn {
-  background: linear-gradient(92deg, #6c63ff 20%, #8f7cff 100%);
-  color: #fff;
-  border: none;
-  border-radius: 6px;
-  padding: 6px 14px;
-  font-size: 1em;
-  cursor: pointer;
-  font-weight: 500;
-  transition: background 0.2s, box-shadow 0.2s;
-  box-shadow: 0 1px 4px rgba(80,80,120,0.07);
-}
-
-#addSleepBtn:hover {
-  background: linear-gradient(92deg, #534bda 20%, #7a6be3 100%);
-}
-
-.muted2 {
-  color: #75759b;
-  font-size: 0.97em;
-  margin-top: 7px;
-  text-align: center;
-}
+    background: #f9f9fb; border: 1px solid #d3d3e7; border-radius: 10px;
+    padding: 22px 18px 16px 18px; box-shadow: 0 2px 8px rgba(90,100,120,0.06);
+    max-width: 400px; direction: rtl; font-family: 'Heebo', Arial, sans-serif;
+    margin: 38px auto 0 auto; display: flex; flex-direction: column; align-items: center;
+  }
+  .stat2 > div:first-child { font-size: 1.12em; color: #272752; margin-bottom: 10px; font-weight: 600; text-align: center; }
+  .row2 { display: flex; align-items: center; gap: 14px; flex-wrap: wrap; justify-content: center; }
+  .row2 label { font-size: 1em; color: #38387a; display: flex; align-items: center; gap: 4px; }
+  .row2 input[type="time"] { border: 1px solid #b8b8d1; border-radius: 6px; padding: 4px 8px; font-size: 1em; background: #fff; color: #2e2e47; outline: none; transition: border 0.2s; }
+  .row2 input[type="time"]:focus { border-color: #6c63ff; }
+  #addSleepBtn {
+    background: linear-gradient(92deg, #6c63ff 20%, #8f7cff 100%);
+    color: #fff; border: none; border-radius: 6px; padding: 6px 14px; font-size: 1em; cursor: pointer; font-weight: 500;
+    transition: background 0.2s, box-shadow 0.2s; box-shadow: 0 1px 4px rgba(80,80,120,0.07);
+  }
+  #addSleepBtn:hover { background: linear-gradient(92deg, #534bda 20%, #7a6be3 100%); }
+  .muted2 { color: #75759b; font-size: 0.97em; margin-top: 7px; text-align: center; }
 </style>
 </head>
 <body>
@@ -116,6 +57,12 @@
     <div id="avgText" class="muted">—</div>
   </div>
 
+  <!-- ספירה שמתאפסת אחרי 3 שעות בלי הפעלה -->
+  <div class="stat">
+    <div><strong>כמה פעמים (חלון אחרון):</strong> <span id="dailyCount">0</span></div>
+    <div class="muted" id="dailyNote">הספירה מתאפסת אם עברו 3 שעות מאז ההפעלה האחרונה</div>
+  </div>
+
   <div class="stat2">
     <div><strong>הוספת זמן שינה להסרה מהממוצע</strong></div>
     <div class="row2" style="margin-top:8px;">
@@ -129,7 +76,7 @@
 
 <script>
 (() => {
-  const BASE_MINUTES = 100;
+  const BASE_MINUTES = 100; // כמו שהיה
   const INCREMENT = 5;
   const LS_KEY = 'mySimpleTimer';
 
@@ -143,28 +90,46 @@
   const sleepEndInput = document.getElementById('sleepEnd');
   const addSleepBtn = document.getElementById('addSleepBtn');
   const sleepRemovedInfo = document.getElementById('sleepRemovedInfo');
+  const dailyCountEl = document.getElementById('dailyCount');
+
+  const THREE_HOURS_MS = 3 * 60 * 60 * 1000;
 
   const defaultState = () => ({
     pressCount: 0,
     firstPressTs: null,
     targetTs: null,
-    totalSleepRemovedMin: 0
+    totalSleepRemovedMin: 0,
+    // ספירת "היום" = חלון שמתרענן אחרי 3 שעות חוסר פעילות
+    dailyCount: 0,
+    lastPressTs: null
   });
 
   const loadState = () => {
     try {
       const raw = localStorage.getItem(LS_KEY);
-      return raw ? JSON.parse(raw) : defaultState();
+      const s = raw ? JSON.parse(raw) : defaultState();
+      if (typeof s.dailyCount !== 'number') s.dailyCount = 0;
+      if (typeof s.lastPressTs !== 'number') s.lastPressTs = null;
+      return s;
     } catch { return defaultState(); }
   };
+
+  let state = loadState();
 
   const saveState = () => {
     try { localStorage.setItem(LS_KEY, JSON.stringify(state)); } catch {}
   };
 
-  let state = loadState();
   let running = false;
   let tickInterval = null;
+
+  function checkResetAfterInactivity() {
+    if (!state.lastPressTs) return;
+    const now = Date.now();
+    if (now - state.lastPressTs >= THREE_HOURS_MS) {
+      state.dailyCount = 0;
+    }
+  }
 
   function mmss(ms) {
     const total = Math.max(0, Math.ceil(ms / 1000));
@@ -200,20 +165,21 @@
     pressCountEl.textContent = state.pressCount;
     nextLengthEl.textContent = `${nextTimerMinutes()} דקות`;
     sleepRemovedInfo.textContent = `סה״כ שינה שהוסרה: ${state.totalSleepRemovedMin} דקות`;
+    dailyCountEl.textContent = state.dailyCount;
     updateAverage();
   }
 
   function updateAverage() {
-  if (!state.firstPressTs || state.pressCount < 2) {
-    avgTextEl.textContent = '—';
-    return;
+    if (!state.firstPressTs || state.pressCount < 2) {
+      avgTextEl.textContent = '—';
+      return;
+    }
+    const elapsedMin = (Date.now() - state.firstPressTs) / 60000;
+    const adjustedMin = Math.max(0, elapsedMin - state.totalSleepRemovedMin);
+    const intervals = state.pressCount - 1;
+    const avg = adjustedMin / intervals;
+    avgTextEl.textContent = formatMinutes(avg);
   }
-  const elapsedMin = (Date.now() - state.firstPressTs) / 60000;
-  const adjustedMin = Math.max(0, elapsedMin - state.totalSleepRemovedMin);
-  const intervals = state.pressCount - 1;
-  const avg = adjustedMin / intervals;
-  avgTextEl.textContent = formatMinutes(avg);
-}
 
   function stopTimer() {
     running = false;
@@ -228,11 +194,20 @@
 
   function startTimer() {
     if (running) return;
+
+    // לפני ספירה — לבדוק אם עברו 3 שעות בלי הפעלה
+    checkResetAfterInactivity();
+
     const nowTs = Date.now();
     const minutes = nextTimerMinutes();
 
     if (!state.firstPressTs) state.firstPressTs = nowTs;
     state.pressCount += 1;
+
+    // ספירת חלון אחרון
+    state.dailyCount += 1;
+    state.lastPressTs = nowTs;
+
     state.targetTs = nowTs + minutes * 60 * 1000;
     saveState();
 
@@ -262,6 +237,11 @@
   });
 
   // אתחול
+  // אם פותחים את הדף אחרי הרבה זמן – נאפס את הספירה לפי כלל ה-3 שעות
+  // אתחול
+checkResetAfterInactivity();
+saveState(); // <- שמירה כדי שהאיפוס ייקלט גם בלי לחיצה();
+
   if (state.targetTs && state.targetTs > Date.now()) {
     running = true;
     startBtn.disabled = true;
@@ -276,6 +256,7 @@
     timerEl.textContent = mmss(BASE_MINUTES * 60 * 1000);
     statusEl.textContent = 'מוכן להתחיל';
   }
+
   updateUI();
 })();
 </script>
