--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- ספירה שמתאפסת אחרי 3 שעות בלי הפעלה -->
   <div class="stat">
     <div><strong>כמה עישנתי היום:</strong> <span id="dailyCount">0</span></div>
-    <div class="muted" id="dailyNote">הספירה מתאפסת אם עברו 3 שעות מאז ההפעלה האחרונה</div>
+    <div class="muted" id="dailyNote">הספירה מתאפסת אם עברו 3 שעות מאז הסיגריה האחרונה</div>
   </div>
 
   <div class="stat2">
